--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ ul.nav-area {
   .navbar {
     padding: 0px;
   }
-
+  .bg-img img {
+    display: none;
+}
   .navbar-expand-sm .navbar-nav .nav-link {
     padding: 27px 28px;
   }
@@ -991,15 +993,41 @@ li.nav-item.drop {
 }
 
 @media only screen and (max-width: 768px){
-    #owl-demo .item img {
-        display: block;
-        width: 100%;
-        height: 180px;
-    }
-
+  #owl-demo .item img {
+    display: block;
+    width: 100%;
+    height: 180px;
+}
+.hamburger.active .bar:nth-child(2) {
+  opacity: 0;
 }
 
-@media only screen and (max-width: 768px){
+.hamburger.active .bar:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
+}
+.navbar {
+  
+  background-color: transparent;
+}
+.nav-logo {
+ color: rgb(0, 0, 0);
+}
+li.nav-item a {
+  color: #000000;
+  position: relative;
+  border-left: 1px solid rgba(255, 255, 255, .5);
+  padding: 0px;
+}
+li.nav-item:hover {
+    background-color: #f30038;
+    width: 100%;
+    padding: 15px;
+}
+
 .section1 {
   height: 576px;
 }
@@ -1046,63 +1074,273 @@ margin-bottom: 20px;
     position: relative;
     z-index: 1;
     background-color: #030303;
-    width: 500px;
+    width: 100%;
     margin-left: -84px;
     border-radius: 20px;
 }
 
 }
-@media only screen and (max-width: 1115px){
-li.nav-item a{
-  color: #ffffff;
-  position: relative;
-  border-left: 1px solid rgba(255, 255, 255, .5);
+
+@media (min-width: 320px) and (max-width: 520px) {
+  .hero__caption p {
+    margin-bottom: 20px;
+    font-weight: 100;
+    margin-top: 8px;
+    font-size: 5vw;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.navbar {
-  
-  background-color: #333;
+.bg-img img {
+  display: none;
+}
+.hero__caption h1 {
+  font-size: 10vw;
+  margin-bottom: 20px;
 }
 .nav-logo {
- color: #fff;
+  font-size: 6vw;
 }
-nav.navbar a:hover {
-  color: #fff;
-  text-decoration: none;
+.navbar {
+  padding: 0px 18px;
 }
+.hero__caption{
+  margin-left: 0px;
+}
+.about-caption h2{
+  font-size: 5vw;
+  text-align: left;
+}
+.btn_02{
+  font-size: 4vw;
+  padding: 16px 7px;
+
+}
+.section3.experience-top {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.section4 {
+  padding-bottom: 60px;
+}
+.tailor-details p {
+  font-size: 5vw;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+.section6.may-about {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.tittle-experience h3 {
+  font-size: 5vw;
+}
+#owl-demo .item img{
+  display: none;
+}
+.footer-tittle ul {
+  margin-bottom: 15px;
+}
+.footer-wrappr .footer-tittle ul li{
+  margin-bottom: 2px;
+}
+.border-btn {
+  font-size: 4vw;
+}
+.about-wrappper {
+  background-color: #fff;
+  padding: 60px 60px;
+}
+.progress-count p{
+  font-size: 6vw;
+}
+.experience {
+  background-color: #f30038;
+  padding: 60px 32px 20px 32px;
+  position: relative;
+}
+.experience h2 {
+  margin-bottom: 25px;
+}
+.experience h2 {
+  font-size: 6vw;
+}
+footer .section-tittle h2{
+  font-size: 6vw;
+  text-align: left;
+}
+.header {
+  background-color: rgba(255,255,255,0.9);
+}
+.nav-item {
+  margin: 10px 0;
+}
+.footer-border {
+  margin-top: 60px;
 }
 
-@media only screen and (max-width: 768px){
-.navbar {
+
+}
+@media (min-width: 520px) and (max-width: 767px){
+  .hero__caption{
+    margin-left: 0px;
+  }
+  .hero__caption h1 {
+    font-size: 6vw;
+  }
+  .hero__caption p {
+    margin-bottom: 20px;
+    font-size: 3vw;
+}
+.about-caption h2 {
+  font-size: 4vw;
+  margin-bottom: 40px;
+}
+.section3.experience-top {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.tailor-details p {
+  font-size: 3vw;
+  padding-top: 45px;
+  padding-bottom: 45px;
+}
+.section6.may-about {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+footer .section-tittle h2 {
+  font-size: 4vw;
+  text-align: left;
+  margin-bottom: 12px;
+  color: #fff;
+}
+.bg-img img {
+  display: none;
+}
+.footer-wrappr {
+ 
+  padding-top: 70px;
   
-  background-color: transparent;
+}
+.section4 {
+  padding-bottom: 60px;
+}
+#owl-demo .item img {
+  display: block;
+  width: 100%;
+  height: 122px;
+}
+.nav-item {
+  margin: 16px 0;
+}
+.tittle-experience h3 {
+  font-size: 4vw;
+  margin-bottom: 19px;
+}
+.border-btn {
+  margin-top: 20px;
+}
+.header {
+  border-bottom: 1px solid rgba(21, 3, 3, 0.9);
+}
+.about-wrappper {
+  padding: 80px 80px;
+}
+}
+@media (min-width: 767px) and (max-width:920px){
+  .bg-img{
+    right: 0px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 0;
+}
+.bg-img img {
+  display: revert;
+}
+.hero-man.responsive img {
+  display: none;
+}
+.section1 {
+  height: 708px;
+}
+.hero__caption {
+  margin-top: 130px;
+  padding: 25px 27px 16px 25px;
+  position: relative;
+  margin-left: 0px;
+  z-index: 1;
+  background-color: #030303;
+  width: 100%;
+}
+
+  .hero__caption h1 {
+    font-size: 4vw;
+  }
+  .hero__caption p {
+    font-size: 2vw;
+    margin-bottom: 24px;
+    margin-top: 6px;
+    }
+    .hero__btn {
+      margin-bottom: 12px;
+  }
+  footer .section-tittle h2 {
+    font-size: 4vw;
+    text-align: left;
+    margin-bottom: 12px;
+    color: #fff;
+}
+.section6.may-about {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.tailor-details p {
+  font-family: "Chivo", sans-serif;
+  color: #ffffff;
+  font-size: 3vw;
+  margin-bottom: 45px;
+  margin-top: 45px;
+  font-weight: 300;
+}
+.section3.experience-top {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.about-caption h2 {
+  font-family: "Shippori Mincho", serif;
+  font-size: 4vw;
+  display: block;
+  font-weight: 400;
+  line-height: 1.3;
+  margin-bottom: 40px;
+}
+.border-btn {
+  font-size: 16px;
+  margin-top: 20px;
+}
+.navbar {
+  background-color: rgba(255,255,255,0.9);
 }
 .nav-logo {
- color: rgb(0, 0, 0);
+  color: #333;
 }
 li.nav-item a {
-  color: #000000;
-  position: relative;
-  border-left: 1px solid rgba(255, 255, 255, .5);
-  padding: 0px;
+  color: #150303;
+  font-size: 16px;
 }
-li.nav-item:hover {
-    background-color: #f30038;
-    width: 100%;
-    padding: 15px;
+li.nav-item a {
+  border-left: 1px solid rgba(21, 3, 3, .2);
+}
+.header {
+  background-color: rgba(255,255,255,0.9);
 }
 }
+@media (min-width: 920px) and (max-width:1220px){
+  .hero__caption {
+    
+    margin-left: 0px; 
+    
+}
 
 
-@media only screen and (max-width: 768px){
-  .hamburger.active .bar:nth-child(2) {
-      opacity: 0;
-  }
-
-  .hamburger.active .bar:nth-child(1) {
-      transform: translateY(8px) rotate(45deg);
-  }
-
-  .hamburger.active .bar:nth-child(3) {
-      transform: translateY(-8px) rotate(-45deg);
-  }
 }
